Update manifest.json, package.json, and index.html*** ***Add interface.ts and Loader component*** ***Remove index.ts, Home.tsx, and App.tsx*** ***Update index.module.css and add DropdownMenu component*** ***Update useCharacterSelection.ts and useCharacterSearch.ts*** ***Remove NotFound component

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 	<meta name="theme-color" content="#000000">
 	<link rel="manifest" href="/manifest.json">
 
-	<title>Rick & Morty Autocomplete</title>
+	<title>
+		React Multi Select Component
+	</title>
 </head>
 
 <body>
